zad 3 slick models

--- a/Zad2 CRUD/app/views/product.scala.html
+++ b/Zad2 CRUD/app/views/product.scala.html
@@ -1,6 +1,6 @@
 @(product: Product)
 
-<li></li>
-<b>@product.name</b>
-  @product.description
+<li><b>@product.name</b>
+  @product.description</li>
+
 
