--- a/Zad2 CRUD/app/views/product/productadd.scala.html
+++ b/Zad2 CRUD/app/views/product/productadd.scala.html
@@ -8,12 +8,17 @@
   @helper.CSRF.formField
   @inputText(product("name"))
   @inputText(product("description"))
+  @inputText(product("price"))
+  @inputText(product("quantity"))
+
 
   <select name="category" id="category">
   @for(cat <- category){
     <option value="@cat.id">@cat.name</option>
   }
   </select>
+
+
 
   <div class="buttons">
     <input type="submit" value="Add Product"/>
