zad 4 forms fix

--- a/Zad2 CRUD/app/views/orderItem/orderItems.scala.html
+++ b/Zad2 CRUD/app/views/orderItem/orderItems.scala.html
@@ -2,6 +2,7 @@
 
     @for(orderItem <- orderItems) {
         <b>@orderItem.id</b>
+        @orderItem.status
 
         <a href="@controllers.routes.OrderItemController.update(orderItem.id)">Edit</a>
         <a href="@controllers.routes.OrderItemController.delete(orderItem.id)">Delete</a>
