--- a/Zad2 CRUD/app/views/order/orders.scala.html
+++ b/Zad2 CRUD/app/views/order/orders.scala.html
@@ -4,6 +4,7 @@
     <b>@order.customer</b>
     @order.product
     @order.shipping
+    @order.quantity
     <a href="@controllers.routes.OrderController.update(order.id)">Edit</a>
     <a href="@controllers.routes.OrderController.delete(order.id)">Delete</a>
 }
