--- a/Zad2 CRUD/app/views/comment/comment.scala.html
+++ b/Zad2 CRUD/app/views/comment/comment.scala.html
@@ -1,5 +1,6 @@
 @(comment: Comment)
-
-<li>
-    <b> @comment.content </b>
-</li>
+<ul>
+    <li>
+        <strong> @comment.content </strong>
+    </li>
+</ul>
