--- a/Zad2 CRUD/app/views/customer/customer.scala.html
+++ b/Zad2 CRUD/app/views/customer/customer.scala.html
@@ -1,6 +1,7 @@
 @(customer: Customer)
-
-<li>
-    <b> @customer.forename </b>
-    @customer.name
-</li>
+<ul>
+    <li>
+        <strong> @customer.forename </strong>
+        @customer.name
+    </li>
+</ul>
