--- a/Zad2 CRUD/app/views/orderItem/orderItem.scala.html
+++ b/Zad2 CRUD/app/views/orderItem/orderItem.scala.html
@@ -1,6 +1,8 @@
 @(orderItem: OrderItem)
 
-<li>
-    <b> @orderItem.id </b>
+<ul>
+    <li>
+        <strong> @orderItem.id </strong>
 
-</li>
+    </li>
+</ul>
