--- a/Zad2 CRUD/app/views/payment/payment.scala.html
+++ b/Zad2 CRUD/app/views/payment/payment.scala.html
@@ -1,6 +1,8 @@
 @(payment: Payment)
 
-<li>
-    <b> @payment.id </b>
+<ul>
+    <li>
+        <strong> @payment.id </strong>
 
-</li>
+    </li>
+</ul>
