--- a/Zad2 CRUD/app/views/rating/rating.scala.html
+++ b/Zad2 CRUD/app/views/rating/rating.scala.html
@@ -1,6 +1,8 @@
 @(rating: Rating)
 
-<li>
-    <b> @rating.value </b>
+<ul>
+    <li>
+        <strong> @rating.value </strong>
 
-</li>
+    </li>
+</ul>
