--- a/Zad2 CRUD/app/views/shipping/shipping.scala.html
+++ b/Zad2 CRUD/app/views/shipping/shipping.scala.html
@@ -1,6 +1,8 @@
 @(shipping: Shipping)
 
-<li>
-    <b> @shipping.id </b>
+<ul>
+    <li>
+        <strong> @shipping.id </strong>
 
-</li>
+    </li>
+</ul>
