--- a/Zad2 CRUD/app/views/comment/comments.scala.html
+++ b/Zad2 CRUD/app/views/comment/comments.scala.html
@@ -1,8 +1,8 @@
 @(comments: Seq[Comment])
 
     @for(comment <- comments) {
-        <b>@comment.id</b>
-        <b>@comment.content</b>
+        <strong>@comment.id</strong>
+        <strong>@comment.content</strong>
         <a href="@controllers.routes.CommentController.update(comment.id)">Edit</a>
         <a href="@controllers.routes.CommentController.delete(comment.id)">Delete</a>
     }
