--- a/Zad2 CRUD/app/views/product/product.scala.html
+++ b/Zad2 CRUD/app/views/product/product.scala.html
@@ -1,6 +1,8 @@
 @(product: Product)
 
-<li><b>@product.name</b>
-  @product.description</li>
+<ul>
+  <li><strong>@product.name</strong>
+    @product.description</li>
+</ul>
 
 
