--- a/Zad2 CRUD/app/views/shipping/shippings.scala.html
+++ b/Zad2 CRUD/app/views/shipping/shippings.scala.html
@@ -1,7 +1,7 @@
 @(shippings: Seq[Shipping])
 
     @for(shipping <- shippings) {
-        <b>@shipping.id</b>
+        <strong>@shipping.id</strong>
         @shipping.street
         <a href="@controllers.routes.ShippingController.update(shipping.id)">Edit</a>
         <a href="@controllers.routes.ShippingController.delete(shipping.id)">Delete</a>
