Removing code smells

--- a/Zad2 CRUD/app/views/order/updateorder.scala.html
+++ b/Zad2 CRUD/app/views/order/updateorder.scala.html
@@ -34,6 +34,6 @@
 
 
     <div class="buttons">
-        <input type="submit" value="Add Order"/>
+        <input type="submit" value="Update Order"/>
     </div>
 }
