--- a/Zad2 CRUD/app/views/orderItem/addorderitem.scala.html
+++ b/Zad2 CRUD/app/views/orderItem/addorderitem.scala.html
@@ -20,7 +20,7 @@
 
     <select name="payment" id="payment">
     @for(c <- payment){
-        <option value="@c.id">@c.total_price</option>
+        <option value="@c.id">@c.totalPrice</option>
     }
     </select>
 
