--- a/play_app/app/views/photo/updatephoto.scala.html
+++ b/play_app/app/views/photo/updatephoto.scala.html
@@ -1,4 +1,4 @@
-@(photo: Form[UpdatePhotoForm], product: Seq[Product])(implicit request: MessagesRequestHeader, flash: Flash)
+@(photo: Form[UpdatePhotoForm], product: Seq[Photo])(implicit request: MessagesRequestHeader, flash: Flash)
 
 @import helper._
 
@@ -14,7 +14,7 @@
 
     <select name="product" id="product">
     @for(cat <- product){
-        <option value="@cat.id">@cat.name</option>
+        <option value="@cat.id">@cat.photo</option>
     }
     </select>
 
