Add categories controller and fixes in layout

--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -27,6 +27,12 @@
 .App-link {
   color: #61dafb;
 }
+img {
+  display: block;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+}
 
 @keyframes App-logo-spin {
   from {
