--- a/play_app/app/views/product/productupdate.scala.html
+++ b/play_app/app/views/product/productupdate.scala.html
@@ -1,4 +1,4 @@
-@(product: Form[UpdateProductForm],category: Seq[Category])(implicit request: MessagesRequestHeader, flash: Flash)
+@(product: Form[UpdateProductForm],category: Seq[Category], photo: Seq[Photo])(implicit request: MessagesRequestHeader, flash: Flash)
 
 @import helper._
 
@@ -18,6 +18,17 @@
       <option value="@cat.id" selected>@cat.name</option>
     }else{
       <option value="@cat.id">@cat.name</option>
+    }
+
+  }
+  </select>
+
+  <select name="photo" id="photo">
+  @for(cat <- photo){
+    @if(cat.id.toString==product("photo").value.getOrElse(0)) {
+      <option value="@cat.id" selected>@cat.photo</option>
+    }else{
+      <option value="@cat.id">@cat.photo</option>
     }
 
   }
